--- a/Dockerfile-apache2
+++ b/Dockerfile-apache2
@@ -29,9 +29,9 @@ RUN apache2ctl restart
 
 RUN mkfifo /var/spool/postfix/public/pickup
 
+ADD confs/guifimaps/refresh.php /var/www/guifimaps/refresh.php
 ADD confs/cron/guifimaps-cron /etc/cron.d/guifimaps
 RUN chmod 0644 /etc/cron.d/guifimaps
 
-RUN mkdir /var/www/guifimaps/cgi-bin
-RUN cp /usr/bin/mapserv /var/www/guifimaps/cgi-bin
+RUN ln -s /usr/bin/mapserv /var/www/guifimaps/cgi-bin/
 RUN chmod +x /var/www/guifimaps/cgi-bin/mapserv
