--- a/Dockerfile-apache2
+++ b/Dockerfile-apache2
@@ -4,7 +4,7 @@ FROM php:5.6-apache
 RUN echo "postfix postfix/mailname string webserver.domain.xx" | debconf-set-selections
 RUN echo "postfix postfix/main_mailer_type string 'Internet Site'" | debconf-set-selections
 
-RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y postfix nano wget libpng-dev mapserver-bin gdal-bin cron
+RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y postfix nano wget libpng-dev mapserver-bin gdal-bin cron libfreetype6-dev libjpeg-dev libxpm-dev
 
 # Copy PHP configuration
 # Edit docker/php.ini and customize it to your needs
@@ -15,6 +15,7 @@ RUN docker-php-ext-install mysql
 RUN docker-php-ext-install mysqli
 RUN docker-php-ext-install pdo
 RUN docker-php-ext-install pdo_mysql
+RUN docker-php-ext-configure gd --with-gd --with-webp-dir --with-jpeg-dir --with-png-dir --with-zlib-dir --with-xpm-dir --with-freetype-dir --enable-gd-native-ttf
 RUN docker-php-ext-install gd
 
 ADD confs/apache2/sites-available /etc/apache2/sites-available
